lab06-gitops-argocd/gitops/envs/prod/netpol-rollouts.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: api-ingress-from-argo-rollouts
spec:
  podSelector:
    matchLabels: { app.kubernetes.io/component: api }
  policyTypes: [Ingress]
  ingress:
    - from:
        - namespaceSelector:
            matchLabels: { kubernetes.io/metadata.name: argo-rollouts }
      ports: [{ protocol: TCP, port: 8000 }]
